unpackaged/main/default/objects/Finance_Accounts_Receivable__c/Finance_Accounts_Receivable__c.object-meta.xml
<CustomObject>
    <description>Used to store records generated when an Invoice is 1 day past the due date and unpaid from FFA</description>
    <label>Accounts Receivable</label>
    <nameField>
        <label>AR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Receivables</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>