unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Receivables</relationshipLabel>
    <relationshipName>Accounts_Receivable</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>