unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/axcessa_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group_Number__c</fullName>
    <label>axcessa Group Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>