unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipName>Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>