unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Finance_Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>