unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Billing_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_First_Name__c</fullName>
    <formula>Account__r.c2g__CODAFinanceContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact First Name</label>
    <type>Text</type>
</CustomField>