unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Collection_Activity__c.field-meta.xml
<CustomField>
    <fullName>Collection_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a Collection Activity Client Case</errorMessage>
        <filterItems>
            <field>Client_Support_Ticket__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Collection Activity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Accounts Receivable</relationshipLabel>
    <relationshipName>Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>