unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/CZ_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>CZ_Payment_Link__c</fullName>
    <description>Link to CZ new payment portal on the Sales Invoice.</description>
    <formula>Sales_Invoice__r.CZ_Payment_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CZ Payment Link</label>
    <type>Text</type>
</CustomField>