unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Days_Outstanding_Calc__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding_Calc__c</fullName>
    <formula>if(

 Outstanding_Value__c &gt; 0,



TODAY() -   Invoice_Date__c,0




)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>