unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Days_Outstanding_Segment__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding_Segment__c</fullName>
    <formula>IF(  Payment_Status__c  &lt;&gt; &quot;Paid&quot; , 

IF(Days_Outstanding_Calc__c &lt; 31, &quot;00-30&quot;,IF(AND(Days_Outstanding_Calc__c &gt;30,Days_Outstanding_Calc__c &lt; 61),&quot;31-60&quot;,IF(AND(Days_Outstanding_Calc__c &gt; 60,Days_Outstanding_Calc__c &lt; 91),&quot;61-90&quot;,&quot;91+&quot;))), 

&quot;PAID&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Outstanding Segment</label>
    <type>Text</type>
</CustomField>