unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipName>Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>