unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 3</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipName>Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>