unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Finance_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_Email__c</fullName>
    <formula>Account__r.c2g__CODAFinanceContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Contact Email</label>
    <type>Text</type>
</CustomField>