unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <formula>Opportunity__r.Group_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Number</label>
    <type>Text</type>
</CustomField>