unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Has_Collection_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Collection_Activity__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Collection_Activity__c )),
        IMAGE(&quot;/servlet/servlet.FileDownload?file=0154A000023TJq5&quot;, &quot;*&quot;, 16, 16) &amp; 
        &#39;Has Activity&#39; &amp; 
        IMAGE(&quot;/servlet/servlet.FileDownload?file=0154A000023TJq5&quot;, &quot;*&quot;, 16, 16),
    &#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Collection Activity?</label>
    <type>Text</type>
</CustomField>