unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Include_in_File_Sync__c.field-meta.xml
<CustomField>
    <fullName>Include_in_File_Sync__c</fullName>
    <formula>AND(
    Payment_Status__c &lt;&gt; &#39;Not Applicable&#39;,
    Invoice_Status__c &lt;&gt; &#39;Discarded&#39;,
    OR(
        ISBLANK( Paid_Date__c ),
        Paid_Date__c &gt; ( TODAY() - 7 )
    )
)</formula>
    <label>Include in File Sync?</label>
    <type>Checkbox</type>
</CustomField>