unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <label>Invoice Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>