unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Emailed_to__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Emailed_to__c</fullName>
    <formula>Billing_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email the Invoice/Receipt was sent to</inlineHelpText>
    <label>Invoice Emailed to</label>
    <type>Text</type>
</CustomField>