unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <label>Invoice Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>