unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <formula>Sales_Invoice__r.Conductor_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is when the Invoice was Emailed to the Client. If the client has paid the invoice this date will match the PAID DATE</inlineHelpText>
    <label>Invoice Sent</label>
    <type>Date</type>
</CustomField>