unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>