unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Value__c</fullName>
    <formula>Sales_Invoice__r.c2g__OutstandingValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>