unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Invoice_Year_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Year_Code__c</fullName>
    <formula>TEXT(YEAR( Invoice_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Year</label>
    <type>Text</type>
</CustomField>