unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate__c</fullName>
    <formula>Id &lt;&gt; Sales_Invoice__r.Accounts_Receivable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Duplicate?</label>
    <type>Checkbox</type>
</CustomField>