unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Not_Equal_to_Sales_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Not_Equal_to_Sales_Invoice_Link__c</fullName>
    <formula>AND(
    NOT(
        ISBLANK(
            Sales_Invoice__r.Accounts_Receivable__c
        )
    ),
     Id &lt;&gt;   Sales_Invoice__r.Accounts_Receivable__r.Id 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Equal to Sales Invoice Link</label>
    <type>Checkbox</type>
</CustomField>