unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Finance_Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>