unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Outstanding_Out_of_Sync__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Out_of_Sync__c</fullName>
    <formula>Outstanding_Value__c  &lt;&gt;  Sales_Invoice__r.c2g__OutstandingValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Out of Sync (Code)</label>
    <type>Checkbox</type>
</CustomField>