unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Part_of_Collection_Activity__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Collection_Activity__c</fullName>
    <formula>NOT(ISBLANK( Collection_Activity__c ))</formula>
    <label>Part of Collection Activity?</label>
    <type>Checkbox</type>
</CustomField>