unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>