unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice Link</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipName>Finance_Accounts_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>