unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/Sales_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Number__c</fullName>
    <formula>Sales_Invoice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Invoice Number</label>
    <type>Text</type>
</CustomField>