unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/SalesInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>SalesInvoiceID__c</fullName>
    <description>HIDDEN FIELD - used only to identify and link this record with the FFA Sales INvoice so that the flow can identify and delete it once it is PAID with 0 Outstanding Value</description>
    <label>SalesInvoiceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>