unpackaged/main/default/objects/Finance_Accounts_Receivable__c/fields/X20_Groups_Member__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Groups Member</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Accounts Receivables</relationshipLabel>
    <relationshipName>Accounts_Receivables</relationshipName>
    <type>Lookup</type>
</CustomField>