unpackaged/main/default/objects/Finance_Accounts_Receivable__c/recordTypes/Software_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Software_Solutions</fullName>
    <active>true</active>
    <label>Software Solutions</label>
</RecordType>