unpackaged/main/default/objects/Finance_Accounts_Receivable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Payment_Status__c</columns>
    <columns>Days_Outstanding_Calc__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>Invoice_Value__c</columns>
    <columns>Outstanding_Value__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>NAME</columns>
    <columns>Dimension_1__c</columns>
    <columns>Dimension_2__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>