unpackaged/main/default/objects/Finance_Accounts_Receivable__c/listViews/NCMi_Invoices_unpaid.listView-meta.xml
<ListView>
    <fullName>NCMi_Invoices_unpaid</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Group_Number__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Collection_Activity__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Days_Outstanding_Calc__c</columns>
    <columns>Outstanding_Value__c</columns>
    <columns>Finance_Contact_Email__c</columns>
    <columns>Invoice_Emailed_to__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Paid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Finance_Accounts_Receivable__c.Institute</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>not applicable,paid</value>
    </filters>
    <label>NCMi Invoices (unpaid)</label>
</ListView>