unpackaged/main/default/objects/Finance_Accounts_Receivable__c/listViews/Not_Paid.listView-meta.xml
<ListView>
    <fullName>Not_Paid</fullName>
    <columns>NAME</columns>
    <columns>Collection_Activity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Days_Outstanding_Calc__c</columns>
    <columns>Outstanding_Value__c</columns>
    <columns>Group_Mbr_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Paid,Not Applicable</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Finance_Accounts_Receivable__c.Software_Solutions</value>
    </filters>
    <label>Not Paid</label>
</ListView>