unpackaged/main/default/objects/Finance_Accounts_Receivable__c/listViews/RS_Invoices_All_unpaid_JCL.listView-meta.xml
<ListView>
    <fullName>RS_Invoices_All_unpaid_JCL</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Group_Number__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Collection_Activity__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Finance_Contact_Email__c</columns>
    <columns>Days_Outstanding_Calc__c</columns>
    <columns>Outstanding_Value__c</columns>
    <columns>Invoice_Emailed_to__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Not Applicable,paid</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Finance_Accounts_Receivable__c.X20_Groups,Finance_Accounts_Receivable__c.Consulting</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Conor</value>
    </filters>
    <label>RS Invoices (All - unpaid) - JCL</label>
</ListView>